deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ir-web-ui-service
  namespace: irui
spec:
  selector:
    app: ir-web-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
